# PCSX2-Remote-Play-System

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  README.md  test.cpp  vcpkg.json
src/: main.cpp
src/client/: client.cpp  client.h
src/host/: host.cpp  host.h
src/host/encoder/: encoder.cpp  encoder.h
